--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,10 +8,24 @@
     <link rel="stylesheet" href="index.css">
     <script src="index.js" defer></script>
 </head>
+
 <body>
     <div class="container">
+        <div class="image">
+            <img src="images/mockup-free-opAeFlgyQqs-unsplash.jpg" alt="">
+        </div>
         <div class="heading">
-            <H2>Your birthday is in</H2>
+            <p class="head">Old Iphone Giveaway</p>
+            <p>Giveaway starts today and ends when the timer hits 00:00:00:00</p>
+        </div>
+        <div class="paragraph">
+            Lorem, ipsum dolor sit amet consectetur adipisicing
+            elit. Repellendus quae nesciunt repellat
+            quidem ex tempore cupiditate mollitia
+            voluptatum dolorem ipsum,
+            dignissimos adipisci similique
+            veritatis incidunt quibusdam deserunt dolorum
+            quos aspernatur!
         </div>
         <div class="timer" id="timer">
             <span id="day" class="timer-block">00</span>
@@ -23,6 +38,7 @@
         </div>
     </div>
 
-   
+
 </body>
+
 </html>
