--- a/index.html
+++ b/index.html
@@ -28,13 +28,13 @@
             quos aspernatur!
         </div>
         <div class="timer" id="timer">
-            <span id="day" class="timer-block">00</span>
+            <span id="day" class="timer-block timer-block-day">00</span>
             <span>:</span>
-            <span id="hour" class="timer-block">00</span>
+            <span id="hour" class="timer-block timer-block-hour">00</span>
             <span>:</span>
-            <span id="min" class="timer-block">00</span>
+            <span id="min" class="timer-block timer-block-min">00</span>
             <span>:</span>
-            <span id="sec" class="timer-block">00</span>
+            <span id="sec" class="timer-block timer-block-sec">00</span>
         </div>
     </div>
 
